# Tilings

./: .gitignore  .isort.cfg  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  ML_Strategy_Pack_Planning.md  README.md  README.rst  Tiling.py  Untitled  all_packs.json  bases_size_1.json  bases_size_10.json  bases_size_11.json  bases_size_12.json  bases_size_2.json  bases_size_3.json  bases_size_4.json  bases_size_5.json  bases_size_6.json  bases_size_7.json  bases_size_8.json  bases_size_9.json  benchmark_collection.py  collect_small_benchmark.py  demo_ml_pipeline.py  dev_requirements.txt  features.py  generating_rule.py  grid.py  guess_basis_props.py  json_test.py  k-separable.py  kseparable.py  learn.py  ml_pipeline.py  mypy.ini  (+18 more)
alfur_sandbox/: 3_and_4_interleaved.py
clutter/: Cover.py  parser.py  parser_test.py  recurrence.py
grids/: Block.py  Cover.py  Factor.py  JsonAble.py  PositiveClass.py  Tiling.py  TilingTree.py  __init__.py  elementaryblocks.py  factor.py  jsonable.py  misc.py  obstruction.py  parser.py  recurrence.py  test.py  tiling.py  tilingtree.py
grids_three/: db_conf.py  griddedperm.py  misc.py  requirement.py  tiling.py
grids_two/: __init__.py  griddedperm.py  jsonable.py  obstruction.py  requirement.py  tiling.py
sandbox/: 3_and_4_interleaved.py
scripts/: compression_test.py  symmetry_test.py
tests/: parser_test.py  spec-1234.json  test_Cell.py  test_JsonAble.py  test_PositiveClass.py  test_Tiling.py  test_assumptions.py  test_bijections.py  test_classdb.py  test_equations.py  test_griddedperm.py  test_map.py  test_misc.py  test_obstruction.py  test_parameter_rule.py  test_predicates.py  test_ranks.py  test_recurrence.py  test_requirements.py  test_strategy_pack.py  test_temp.py  test_tilescope.py  test_tiling.py  test_tiling.py~  test_tiling_with_preimage.py  test_tree_expansion.py
tilings/: __init__.py  assumptions.py  bijections.py  cli.py  db_conf.py  griddedperm.py  gui_launcher.py  gui_luncher.py  map.py  misc.py  obstruction.py  (+6 more)
(+152 files in other folders)
